--- a/fullstack/s56-s64 server/package.json
+++ b/fullstack/s56-s64 server/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "s43-47",
+  "name": "csp2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Booking System MVP requirements",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
     "dev": "nodemon index"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.18.3",
+    "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.9",
-    "nodemon": "^2.0.22"
+    "mongoose": "^8.0.0"
   }
 }
